Made chnages in header

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2574,6 +2574,7 @@ textarea {
   padding: 0;
   text-align: center;
   margin: 25px 0;
+  font-weight: bold;
 
   a {
     padding: 3px 10px;
@@ -8701,4 +8702,16 @@ $min-height-disclosure: 92px;
     }
   }
 }
+.grid.grid--no-gutters.grid--table.site-header__mobile-nav {
+  background-color: #d8e1e8;
+}
+
+header.site-header.border-bottom.logo--left {
+  background-color: #d8e1e8;
+}
+
+.grid__item.medium-up--one-quarter.logo-align--left {
+  text-align: -webkit-right;
+}
+
 
