--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -6,7 +6,7 @@
       }
     {% endif %}
 
-    {% if section.settings.align_logo == 'left' %}
+    {% if section.settings.align_logo == 'right' %}
       .site-header__logo-image {
         margin: 0;
       }
