Made chnages in header

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8704,6 +8704,7 @@ $min-height-disclosure: 92px;
 }
 .grid.grid--no-gutters.grid--table.site-header__mobile-nav {
   background-color: #d8e1e8;
+  padding-top: 40px;
 }
 
 header.site-header.border-bottom.logo--left {
@@ -8714,4 +8715,12 @@ header.site-header.border-bottom.logo--left {
   text-align: -webkit-right;
 }
 
+@media only screen and (min-width: 1168px){
+.medium-up--one-quarter {
+    width: 50%;
+}
 
+.medium-up--one-half {
+    width: 35%;
+}
+}
