--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -124,11 +124,13 @@
             {% if customer %}
               <a href="{{ routes.account_url }}" class="site-header__icon site-header__account">
                 {% include 'icon-login' %}
+                <span id="cxlogin">SIGNIN/REGISTER </span>
                 <span class="icon__fallback-text">{{ 'layout.customer.account' | t }}</span>
               </a>
             {% else %}
               <a href="{{ routes.account_login_url }}" class="site-header__icon site-header__account">
                 {% include 'icon-login' %}
+                <span id="cxlogin">SIGNIN/REGISTER </span>
                 <span class="icon__fallback-text">{{ 'layout.customer.log_in' | t }}</span>
               </a>
             {% endif %}
