added custom form

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -138,5 +138,15 @@
     <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
     <li id="a11y-selection-message">{{ 'general.accessibility.selection_help' | t }}</li>
   </ul>
+  <!-- <script>
+    function password() {
+      var x = document.getElementById("my");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+  </script> -->
 </body>
 </html>
