--- a/snippets/search-drawer.liquid
+++ b/snippets/search-drawer.liquid
@@ -6,7 +6,7 @@
           <input
             type="text"
             name="q"
-            placeholder="{{ 'general.search.placeholder' | t }}"
+            placeholder="{{ 'What are you looking for?' }}"
             role="combobox"
             aria-autocomplete="list"
             aria-owns="predictive-search-results"
@@ -23,6 +23,8 @@
         <button class="search-bar__submit search-form__submit"
           type="submit"
           data-search-form-submit>
+
+          SEARCH
          
         </button>
       </form> 
