added new sction in body part

--- a/sections/Rudsak.liquid
+++ b/sections/Rudsak.liquid
@@ -1,5 +1,5 @@
 {%for block in section.blocks %}
-  <img  src = "{{block.settings.image | img_url:'master'}}" />                 
+<a href="https://firelotus.myshopify.com/collections/all"> <img  src = "{{block.settings.image | img_url:'master'}}" /> </a>                 
 {%endfor%}
 {% schema %}
   {
