--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8762,10 +8762,6 @@ form#localization_form {
 	margin-bottom: 0px;
 }
 
-// ul.slick-dots {
-// 	display: none !important;
-// }
-
 .slideshow__arrows .slideshow__arrow {
 	top: -220px;
 }
@@ -8809,141 +8805,96 @@ div#shopify-section-1593149565884 {
 	line-height: 0.5;
 }
 
-// .slideshow__arrows{
-//   background-color: transparent;
-// }
-
 .collection-slider {
-  .slick-track {
-    display: flex;
-  }
-  .product-card{
-    width:100%;
-  }
-  .slick-prev{
-    left:0;
-    z-index:999;
-  }
-  .slick-next{
-    right:0;
-    z-index:999;
-  }
-  padding-right:25px;
-
-  overflow: hidden;
+	.slick-track {
+		display: flex;
+	}
+	.product-card {
+		width: 100%;
+	}
+	.slick-prev {
+		left: 0;
+		z-index: 999;
+	}
+	.slick-next {
+		right: 0;
+		z-index: 999;
+	}
+	padding-right:25px;
+	overflow: hidden;
 }
 
 ul.slick-dots li#slickDot30 button {
-  background: none !important;
+	background: none !important;
 }
 
 .slick-dots li.slick-active button:before {
-  color: black !important;
-  opacity: 0.75 !important;
-  font-size: 40px !important; 
+	color: black !important;
+	opacity: 0.75 !important;
+	font-size: 40px !important;
 }
 
-.slick-dots li button:before, .slick-dots li a:before{
-  color: darkgrey;
-      opacity: 1.25;
-    font-size: 40px;
-  }
-
-  div#SlideshowWrapper-1593012614843 .slideshow__controls ul.slick-dots {
-    display: none !important;
+.slick-dots li button:before,
+.slick-dots li a:before {
+	color: darkgrey;
+	opacity: 1.25;
+	font-size: 40px;
 }
 
-.slideshow__arrows{
-  background-color: transparent !important;} 
+div#SlideshowWrapper-1593012614843 .slideshow__controls ul.slick-dots {
+	display: none !important;
+}
 
-.lotus{
-  display: grid;
-  grid-template-columns: 0.5fr; 
+.slideshow__arrows {
+	background-color: transparent !important;
+}
+
+.lotus {
+	display: grid;
+	grid-template-columns: 0.5fr;
 }
 
 .White-item.fimage img {
-    width: 650px;
-    height: 600px;
+	width: 650px;
+	height: 600px;
 }
 
 div#shopify-section-1593435183694 {
-    padding: 0;
+	padding: 0;
 }
 
 div#shopify-section-1593530644612 {
-    padding-top: 0;
+	padding-top: 0;
 }
 
 div#shopify-section-1593529613242 {
-    padding-top: 0;
+	padding-top: 0;
 }
 
 div#shopify-section-1593529613242 h2 {
-    text-align: left;
+	text-align: left;
 }
 
 .section-header.text-center {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 div#shopify-section-1593529613242 .page-width {
-    padding-left: 10px;
-    padding-right: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .White-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-column-gap: 0px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column-gap: 0px;
 }
 
 .White-item {
-  display: grid;
+	display: grid;
 }
 
 .White-item.fslide {
-    padding-left: 80px;
-    padding-right: 55px;
+	padding-left: 80px;
+	padding-right: 55px;
 }
-
-/* .White-item{
-  display: grid;
- 
-  
-} */
-
-
-//.fimage {
-//  grid-area: fimage;
-/*   grid-template-columns: 0.5fr;  */
-//}
-
-/* .fslide {
-  grid-area: fslide;
-  grid-template-columns: 0.5fr;  
-}
- */
-
-
-
-
-  
-  
-/*    display: grid;
-  grid-template-columns: 1fr 1fr;
-}
- */
-/* .White-grid {
-  display: grid;
-  
-  grid-template-columns: 1fr;
-  grid-template-areas:
-    'fimage'
-    'fslide';
-
-  @media screen and (min-width: 600px) {
-    grid-template-columns: 1fr ;
-    grid-template-areas:
-     'fimage fslide';
-  }
-} */
