--- a/sections/Rudsak.liquid
+++ b/sections/Rudsak.liquid
@@ -2,31 +2,32 @@
 <a href="https://firelotus.myshopify.com/collections/all"> <img  src = "{{block.settings.image | img_url:'master'}}" /> </a>                 
 {%endfor%}
 {% schema %}
-  {
+
+{
     "name": "rudsak",
     "settings": [],
-    "blocks" : [
-                  {  "type": "image",
-                     "name": "image block",
-                     "settings": [
-                                   {
-                                     "type" : "image_picker",
-                                     "label" : "your image",
-                                     "id" : "image"
-                                    }
-                                  ]
-                   }
-                 ],
-     "presets" : [    
-                    {    "category" : "image",
-                          "name": "image section"
-                    }
-                   
-                  ] 
-  }
+    "blocks": [
+        {
+            "type": "image",
+            "name": "image block",
+            "settings": [
+                {
+                    "type": "image_picker",
+                    "label": "your image",
+                    "id": "image"
+                }
+            ]
+        }
+    ],
+    "presets": [
+        {
+            "category": "image",
+            "name": "image section"
+        }
+    ]
+}
+
 {% endschema %}
 
-{% stylesheet %}
-{% endstylesheet %}
 
 
