--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8723,10 +8723,8 @@ header.site-header.border-bottom.logo--left {
 }
 
 @media only screen and (min-width: 1168px) {
-	.medium-up--one-quarter {
-		width: 50%;
-	}
-	.medium-up--one-half {
+	.logo-align--left,
+	nav#AccessibleNav {
 		width: 35%;
 	}
 }
@@ -8740,16 +8738,30 @@ button.btn--link.site-header__icon.site-header__search-toggle.js-drawer-open-top
 	padding: 0px;
 }
 
-@media only screen and (min-width: 750px) {
-	.site-header__account,
-	.site-header__cart {
-		padding: 0px 75px 0 0;
-		bottom: 60px;
+@media only screen and (min-width: 1168px) {
+	.site-header__account {
+		padding: 0px 60px 0 75px;
 	}
 }
 
-a.site-header__icon.site-header__account {
-	PADDING-RIGHT: 0;
+@media only screen and (max-width: 1168px) {
+	.site-header__account {
+		padding: 0px 10px 0 35px;
+	}
+}
+
+@media only screen and (min-width: 750px) {
+	.site-header__cart {
+		padding: 0px 0px 0 0;
+		bottom: 60px;
+	}
+	.site-header__account {
+		bottom: 60px;
+	}
+	div#shopify-section-1593529613242 .page-width {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
 }
 
 @media only screen and (max-width: 880px) {
@@ -8854,11 +8866,6 @@ div#SlideshowWrapper-1593012614843 .slideshow__controls ul.slick-dots {
 	grid-template-columns: 0.5fr;
 }
 
-.White-item.fimage img {
-	width: 650px;
-	height: 600px;
-}
-
 div#shopify-section-1593435183694 {
 	padding: 0;
 }
@@ -8871,30 +8878,51 @@ div#shopify-section-1593529613242 {
 	padding-top: 0;
 }
 
-div#shopify-section-1593529613242 h2 {
-	text-align: left;
-}
-
-.section-header.text-center {
+div#shopify-section-1593529613242 .section-header.text-left {
 	margin-bottom: 30px;
 }
 
-div#shopify-section-1593529613242 .page-width {
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-.White-grid {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-column-gap: 0px;
-}
-
-.White-item {
-	display: grid;
+@media only screen and (min-width: 696px) {
+	.White-grid {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-column-gap: 0px;
+	}
+	.White-item {
+		display: grid;
+	}
 }
 
 .White-item.fslide {
 	padding-left: 80px;
 	padding-right: 55px;
+}
+
+.grid__item.medium-up--one-quarter.text-right.site-header__icons.site-header__icons--plus .site-header__icons-wrapper {
+	justify-content: normal;
+}
+
+.slideshow__arrows--mobile {
+	display: none;
+}
+
+.section-header.text-left.firex {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+}
+
+.section-header.text-left.firex h2 {
+	margin: 0;
+}
+
+.section-header.text-left.firey {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+div#shopify-section-1593435183694 .section-header.text-left,
+div#shopify-section-1593530644612 .section-header.text-left {
+	margin: 0;
 }
